Test Javadoc JEP-413